@@ -1,3 +1,10 @@
+Fri Apr 16 08:05:19 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * prj_install.pl:
+
+          This script reads .ins files generated by MPC and installs
+          portions of a project into a user specified location.
+
 Thu Apr 15 13:16:03 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/WorkspaceCreator.pm:
